implemented BusPath and Booking mutation and queries

--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
 			<version>12.1.0</version>
 		</dependency>
 		<dependency>
+			<groupId>com.zhokhov.graphql</groupId>
+			<artifactId>graphql-datetime-autoconfigure-webflux</artifactId>
+			<version>4.1.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 		</dependency>
