--- a/pom.xml
+++ b/pom.xml
@@ -66,14 +66,9 @@
 			<artifactId>querydsl-apt</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>net.sf.dozer</groupId>
-			<artifactId>dozer</artifactId>
-			<version>5.5.1</version>
-		</dependency>
-		<dependency>
-			<groupId>net.sf.dozer</groupId>
-			<artifactId>dozer-spring</artifactId>
-			<version>5.5.1</version>
+			<groupId>dev.akkinoc.spring.boot</groupId>
+			<artifactId>orika-spring-boot-starter</artifactId>
+			<version>2.3.1</version>
 		</dependency>
 
 
@@ -93,6 +88,13 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <configuration>
+                <jvmArguments>--add-opens java.base/java.lang=ALL-UNNAMED</jvmArguments>
+            </configuration>
+        </plugin>
 		</plugins>
 	</build>
 
