--- a/pom.xml
+++ b/pom.xml
@@ -30,14 +30,14 @@
 			<version>12.0.0</version>
 		</dependency>
 		<dependency>
-			<groupId>com.graphql-java-kickstart</groupId>
-			<artifactId>graphql-java-tools</artifactId>
-			<version>12.1.0</version>
+			<groupId>com.zhokhov.graphql</groupId>
+			<artifactId>graphql-datetime-autoconfigure</artifactId>
+			<version>4.1.0</version>
 		</dependency>
 		<dependency>
-			<groupId>com.zhokhov.graphql</groupId>
-			<artifactId>graphql-datetime-autoconfigure-webflux</artifactId>
-			<version>4.1.0</version>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20220320</version>
 		</dependency>
 		<dependency>
 			<groupId>org.postgresql</groupId>
@@ -71,8 +71,11 @@
 			<groupId>com.querydsl</groupId>
 			<artifactId>querydsl-apt</artifactId>
 		</dependency>
-
-
+		<dependency>
+			<groupId>com.vladmihalcea</groupId>
+			<artifactId>hibernate-types-52</artifactId>
+			<version>2.17.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
